# sumare

./: Dockerfile  README.md  pyproject.toml
flagged/: log.csv
sumare/: __main__.py  launch.py  main.py
